@@ -1,3 +1,8 @@
+2003-12-04  Dmitriy Anisimkov <anisimkov@yahoo.com>
+
+	* aws-services-files.adb:
+	(Open) Fix Content-Type and Accept-Encoding.
+
 2003-12-03  Pascal Obry  <p.obry@wanadoo.fr>
 
 	* makefile:
